# liquid-staking-contract

./: Cargo.toml  README.md  build.sh
metapool/: Cargo.toml
metapool/src/: account.rs  distribute.rs  empty_nep_145.rs  events.rs  fungible_token_standard.rs  internal.rs  lib.rs  migrations.rs  owner.rs  reward_meter.rs  staking_pools.rs  types.rs  utils.rs
metapool/tests/: tests.md
scripts/: propose-upgrade.sh
test-core-staking-pool/: Cargo.toml
test-core-staking-pool/src/: internal.rs  lib.rs
test-get-epoch-contract/: Cargo.toml
test-get-epoch-contract/src/: lib.rs  owner.rs
