[package]
edition = "2018"
name = "metapool"
version = "1.2.1"
authors = ["Metapool.app <hello@metapool.app>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.0.0"
uint = { version = "0.9.5", default-features = false }

[features]
debug_log = []

